--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,16 +64,16 @@ server {
         rewrite_log on;
     }
 
-    location /keycloak-admin/ {
-        proxy_pass http://keycloak:8080/keycloak-admin/;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_set_header   X-Forwarded-Host $http_host;
-        proxy_set_header   X-Forwarded-Port $server_port;
-        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
-    }
+#     location /keycloak-admin/ {
+#         proxy_pass http://keycloak:8080/keycloak-admin/;
+#         proxy_set_header   Host $host;
+#         proxy_set_header   X-Real-IP $remote_addr;
+#         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header   X-Forwarded-Proto $scheme;
+#         proxy_set_header   X-Forwarded-Host $http_host;
+#         proxy_set_header   X-Forwarded-Port $server_port;
+#         proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
+#     }
 
     location /wsapps {
 
