--- a/example.env
+++ b/example.env
@@ -2,6 +2,7 @@ MONGO_URL=mongodb://mongo:27017/webprotege
 ISSUER_URI=http://webprotege-local.edu/keycloak-admin/realms/webprotege
 JWK_SET_URI=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/certs
 KEYCLOAK_WEBPROTEGE_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege
+KEYCLOAK_HOST=http://webprotege-local.edu/keycloak-admin
 KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/logout
 SERVER_HOST=webprotege-local.edu
 ADMIN_CLI_SECRET=
@@ -22,6 +23,12 @@ MINIO_ROOT_PASSWORD=webprotege
 MINIO_ROOT_USER=webprotege
 MINIO_ROOT_PASSWORD=webprotege
 MINIO_BUCKET_NAME=webprotege-uploads
+
+# Additional Configuration
+MAX_FILE_SIZE=100MB
+MAX_REQUEST_SIZE=100MB
+RABBITMQ_TIMEOUT=30000
+KEYCLOAK_CLIENT_ID=admin-cli
 
 # ICATX Versioning Service Keycloak Configuration
 KEYCLOAK_TOKEN_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/token
