--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,7 +75,7 @@ server {
 #         proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
 #     }
 
-    location /wsapps {
+    location /webprotege/wsapps {
 
         proxy_pass http://webprotege-gwt-api-gateway:7777;
         proxy_http_version 1.1;
