--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,23 +33,23 @@ server {
         client_max_body_size   500m;
     }
 
-    location /files/submit {
+    location /webprotege/files/submit {
         proxy_pass http://webprotege-gwt-api-gateway:7777/files/submit;
         proxy_set_header   Host $http_host;
         client_max_body_size   500m;
     }
 
-    location /icat/ {
+    location /webprotege/icat/ {
           proxy_pass http://icatx-api-gateway:7779/icat/;
           proxy_set_header   Host $http_host;
     }
 
-    location /versioning/ {
+    location /webprotege/versioning/ {
               proxy_pass http://icatx-versioning-service:7722/icat/;
               proxy_set_header   Host $http_host;
     }
 
-    location /data/ {
+    location /webprotege/data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
@@ -92,7 +92,7 @@ server {
                 keepalive_requests 100;
     }
 
-    location /kibana/ {
+    location /webprotege/kibana/ {
         proxy_pass http://kibana:5601;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
