added configurable websocket endpoint.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,7 +113,7 @@ services:
       spring.servlet.multipart.max-request-size: ${MAX_REQUEST_SIZE}
       WEBPROTEGE_ALLOWEDORIGIN: ${SERVER_HOST}
       WEBPROTEGE_WEBSOCKETENDPOINT: ${WEBPROTEGE_WEBSOCKETENDPOINT}
-      webprotege.rabbit.timeout: ${WEBSOCKET_ENDPOINT}
+      webprotege.rabbit.timeout: ${RABBITMQ_TIMEOUT}
       SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI: ${KEYCLOAK_WEBPROTEGE_URL}
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: ${KEYCLOAK_WEBPROTEGE_URL}
     networks:
