--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -77,7 +77,7 @@ server {
 
     location /webprotege/wsapps {
 
-        proxy_pass http://webprotege-gwt-api-gateway:7777;
+        proxy_pass http://webprotege-gwt-api-gateway:7777/wsapps;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
