--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
         client_max_body_size   500m;
     }
 
-    location /webprotege/ {
+    location /icatx/ {
         proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
@@ -33,23 +33,23 @@ server {
         client_max_body_size   500m;
     }
 
-    location /webprotege/files/submit {
+    location /icatx/files/submit {
         proxy_pass http://webprotege-gwt-api-gateway:7777/files/submit;
         proxy_set_header   Host $http_host;
         client_max_body_size   500m;
     }
 
-    location /webprotege/icat/ {
+    location /icatx/icat/ {
           proxy_pass http://icatx-api-gateway:7779/icat/;
           proxy_set_header   Host $http_host;
     }
 
-    location /webprotege/versioning/ {
+    location /icatx/versioning/ {
               proxy_pass http://icatx-versioning-service:7722/icat/;
               proxy_set_header   Host $http_host;
     }
 
-    location /webprotege/data/ {
+    location /icatx/data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
@@ -75,7 +75,7 @@ server {
 #         proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
 #     }
 
-    location /webprotege/wsapps {
+    location /icatx/wsapps {
 
         proxy_pass http://webprotege-gwt-api-gateway:7777/wsapps;
         proxy_http_version 1.1;
@@ -92,7 +92,7 @@ server {
                 keepalive_requests 100;
     }
 
-    location /webprotege/kibana/ {
+    location /icatx/kibana/ {
         proxy_pass http://kibana:5601;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
