--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     client_body_buffer_size 40M;
 
     location / {
-        proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
+        proxy_pass http://webprotege-gwt-ui-server:8080/icatx/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,7 +20,7 @@ server {
     }
 
     location /icatx/ {
-        proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
+        proxy_pass http://webprotege-gwt-ui-server:8080/icatx/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -39,13 +39,13 @@ server {
         client_max_body_size   500m;
     }
 
-    location /icatx/icat/ {
-          proxy_pass http://icatx-api-gateway:7779/icat/;
+    location /icatx/api/ {
+          proxy_pass http://icatx-api-gateway:7779/api/;
           proxy_set_header   Host $http_host;
     }
 
     location /icatx/versioning/ {
-              proxy_pass http://icatx-versioning-service:7722/icat/;
+              proxy_pass http://icatx-versioning-service:7722/versioning/;
               proxy_set_header   Host $http_host;
     }
 
