changed nginx routing.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,12 +40,12 @@ server {
     }
 
     location /icatx/api/ {
-          proxy_pass http://icatx-api-gateway:7779/api/;
+          proxy_pass http://icatx-api-gateway:7779/;
           proxy_set_header   Host $http_host;
     }
 
     location /icatx/versioning/ {
-              proxy_pass http://icatx-versioning-service:7722/versioning/;
+              proxy_pass http://icatx-versioning-service:7722/;
               proxy_set_header   Host $http_host;
     }
 
