changed nginx routing.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,7 +45,7 @@ server {
     }
 
     location /icatx/versioning/ {
-              proxy_pass http://icatx-versioning-service:7722/;
+              proxy_pass http://icatx-versioning-service:7722/versioning/;
               proxy_set_header   Host $http_host;
     }
 
