--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -453,6 +453,7 @@ services:
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${ISSUER_URI}
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: ${JWK_SET_URI}
       SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: ${ISSUER_URI}
+      SPRINGDOC_API_DOCS_PATH: ${SWAGGER_UI_PATH}
       SWAGGER_UI_PATH: ${SWAGGER_UI_PATH}
       API_DOCS_PATH: ${API_DOCS_PATH}
       LOGGER_LEVEL_ROOT: INFO
