--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ server {
     }
 
     location /icatx/api/ {
-          proxy_pass http://icatx-api-gateway:7779/api/;
+          proxy_pass http://icatx-api-gateway:7779/icatx/api/;
           proxy_set_header   Host $http_host;
     }
 
