changed api nginxconf.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -454,6 +454,7 @@ services:
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: ${JWK_SET_URI}
       SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: ${ISSUER_URI}
       SWAGGER_UI_PATH: ${SWAGGER_UI_PATH}
+      SERVER_SERVLET_CONTEXT_PATH: ${ICATX_GATEWAY_CONTEXT_PATH}
       API_DOCS_PATH: ${API_DOCS_PATH}
       LOGGER_LEVEL_ROOT: INFO
       SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
