--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -558,7 +558,7 @@ services:
       - XPACK_SECURITY_ENABLED=false
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=kibana
-      - SERVER_BASEPATH=/kibana
+      - SERVER_BASEPATH=/icatx/kibana
       - SERVER_REWRITEBASEPATH=true
       - SERVER_PUBLICBASEURL=${SERVER_HOST}/kibana
       - SERVER_HOST=0.0.0.0
