added env var on kibana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -560,7 +560,7 @@ services:
       - ELASTICSEARCH_PASSWORD=kibana
       - SERVER_BASEPATH=/icatx/kibana
       - SERVER_REWRITEBASEPATH=true
-      - SERVER_PUBLICBASEURL=${SERVER_HOST}/kibana
+      - SERVER_PUBLICBASEURL=${SERVER_HOST}kibana
       - SERVER_HOST=0.0.0.0
       - SERVER_NAME=kibana
       - SERVER_MAXPAYLOADBYTES=1048576
