--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,7 +232,7 @@ services:
       - elk
 
   webprotege-ontology-processing-service:
-    image: protegeproject/webprotege-ontology-processing-service:1.0.3-WHO
+    image: protegeproject/webprotege-ontology-processing-service:1.0.5
     depends_on:
       rabbitmq:
         condition: service_healthy
