--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -306,7 +306,7 @@ services:
       webprotege.directories.data: "/srv/webprotege"
       webprotege.directories.backup : "/webprotege/backup"
       SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
-      LOGGING_LEVEL_ROOT: INFO
+      LOGGING_LEVEL_ROOT: DEBUG
       SPRING_RABBITMQ_USERNAME: ${RABBITMQ_DEFAULT_USER}
       SPRING_RABBITMQ_PASSWORD: ${RABBITMQ_DEFAULT_PASS}
       webprotege.rabbit.timeout: ${RABBITMQ_TIMEOUT}
