set debug on websocket.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,10 @@ services:
       webprotege.rabbit.timeout: ${RABBITMQ_TIMEOUT}
       SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI: ${KEYCLOAK_WEBPROTEGE_URL}
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: ${KEYCLOAK_WEBPROTEGE_URL}
+      logging.level.org.springframework.security.messaging.web.socket: DEBUG
+      logging.level.org.springframework.web.socket.server: DEBUG
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY_MESSAGING_WEB_SOCKET: DEBUG
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB_SOCKET_SERVER : DEBUG
     networks:
       - elk
 
