--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
         proxy_set_header   X-Forwarded-Host  $host;
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-Proto https;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
@@ -27,7 +27,7 @@ server {
         proxy_set_header   X-Forwarded-Host  $host;
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-Proto https;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
