--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,8 +14,6 @@ server {
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
     }
 
@@ -28,8 +26,6 @@ server {
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
     }
 
@@ -48,21 +44,19 @@ server {
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
         rewrite_log on;
     }
 
-    location /keycloak-admin/ {
-        proxy_pass http://keycloak:8080/keycloak-admin/;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_set_header   X-Forwarded-Host $http_host;
-        proxy_set_header   X-Forwarded-Port $server_port;
-        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
+    location /keycloak/ {
+        proxy_pass http://keycloak:8080/keycloak/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_redirect off;
     }
 
     location /wsapps {
